src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Budgeting_Organisation_Code__c</fullName>
        <description>This is the code copied from CPID Oscar reference data sheet</description>
        <inlineHelpText>This field is from OSCAR and will be used by Treasury in reporting. None of these will be required to be filled in by the user, but they are extracted from the CPID code (if any provided) automatically by the system</inlineHelpText>
        <label>Budgeting Organisation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CENTRAL EXCHEQUER</fullName>
                </value>
                <value>
                    <fullName>DEPARTMENTS</fullName>
                </value>
                <value>
                    <fullName>DEVOLVED ADMINISTRATIONS</fullName>
                </value>
                <value>
                    <fullName>LOCAL GOVERNMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPID_from_OSCAR__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>Counter-Party Identifier Code (CPID). The Treasury produced a list of all bodies within the Whole of Government Accounts boundary (WGA). Each WGA body is issued by the Treasury with a unique CPID code. To be provided if applicable.</inlineHelpText>
        <label>CPID (from OSCAR)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charities_Commission_Number__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>Registered charity number for the organisation. To be provided if applicable.</inlineHelpText>
        <label>Charities Commission Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Companies_House_Number__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>This can also be called the Company Registration Number (CRN) and is allocated by Companies House on registration of a company. To be provided if applicable.</inlineHelpText>
        <label>Companies House Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Data Universal Number System -  a proprietary system developed and regulated by Dun &amp; Bradstreet (D&amp;B) that assigns a unique numeric identifier, referred to as a &quot;DUNS number&quot; to a single business entity. To be provided if applicable.</inlineHelpText>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISNI__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>International Standard Name Identifier. ISNI is the ISO certified global standard number for identifying the millions of contributors to creative works and those active in their distribution. To be provided if applicable.</inlineHelpText>
        <label>ISNI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Intermediary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermediary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_ID__c</fullName>
        <description>This is the internation Id which is used as the external id for the organisation.</description>
        <inlineHelpText>this is an ID for international organisations that might not have any of the above IDs</inlineHelpText>
        <label>International ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Funder__c</fullName>
        <description>This field show if the organisation is Funder type.</description>
        <formula>INCLUDES(Type__c , &quot;Funder&quot;) || Funder__c = True</formula>
        <label>Is Funder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_My_Department_Data__c</fullName>
        <description>The user needs to have a default list view filtered for their own department, but they can change this</description>
        <formula>LEFT(
 Owner.UserRole.Name, 
 IF(
  RIGHT(Owner.UserRole.Name, 8) == &apos; Manager&apos;
  , LEN(Owner.UserRole.Name) - 8
  , LEN(Owner.UserRole.Name) - 5
 )
) == LEFT(
 $UserRole.Name, 
 IF(
  RIGHT($UserRole.Name, 8) == &apos; Manager&apos;
  , LEN($UserRole.Name) - 8
  , LEN($UserRole.Name) - 5
 )
)</formula>
        <label>Is My Department Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSCAR_Organisation_Long_Name__c</fullName>
        <inlineHelpText>This field is from OSCAR and will be used by Treasury in reporting. None of these will be required to be filled in by the user, but they are extracted from the CPID code (if any provided) automatically by the system</inlineHelpText>
        <label>OSCAR Organisation Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Sub_Type_Code__c</fullName>
        <description>This is the code copied from CPID Oscar reference data sheet</description>
        <inlineHelpText>This field is from OSCAR and will be used by Treasury in reporting. None of these will be required to be filled in by the user, but they are extracted from the CPID code (if any provided) automatically by the system</inlineHelpText>
        <label>Organisation Sub Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PENSION</fullName>
                </value>
                <value>
                    <fullName>DEPT</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>ALBD</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>PFI Other</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>WPR</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LA County Council</fullName>
                </value>
                <value>
                    <fullName>LA District council</fullName>
                </value>
                <value>
                    <fullName>LA Fire Authority</fullName>
                </value>
                <value>
                    <fullName>LA London borough council</fullName>
                </value>
                <value>
                    <fullName>LA Metropolitan borough council</fullName>
                </value>
                <value>
                    <fullName>LA Unitary authority</fullName>
                </value>
                <value>
                    <fullName>LA Waste Disposal Body</fullName>
                </value>
                <value>
                    <fullName>NHS Acute Foundation Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Acute Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Ambulance Service NHS Foundation Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Ambulance Service NHS Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Care Foundation Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Care Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Mental Health Foundation Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Mental Health Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Mental Health Trust PCT</fullName>
                </value>
                <value>
                    <fullName>NHS Primary Care Trust</fullName>
                </value>
                <value>
                    <fullName>NHS Special Health Authority and other bodies</fullName>
                </value>
                <value>
                    <fullName>NHS Strategic Health Authority</fullName>
                </value>
                <value>
                    <fullName>LA Police Authority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation_Type_Code__c</fullName>
        <description>This is the code copied from CPID Oscar reference data sheet</description>
        <inlineHelpText>This field is from OSCAR and will be used by Treasury in reporting. None of these will be required to be filled in by the user, but they are extracted from the CPID code (if any provided) automatically by the system</inlineHelpText>
        <label>Organisation Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CG</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>PFI</fullName>
                </value>
                <value>
                    <fullName>WPR</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_ID__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>If organisation has another internal system ID that a department is storing, this can be provided here. 
In order for the system to de-duplicate one of the IDs below is necessary. If none are available, please include any other reference number.</inlineHelpText>
        <label>Other ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Address_1__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The first line of the address for an organisation. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_2__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The second line of the address for an organisation. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The city of the address for an organisation. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The country of the address for an organisation. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Akrotiri</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Baker Island</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_County__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The county of the address for an organisation. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Postal_Code__c</fullName>
        <description>Custom Address Fields are used because the Cabinet Office requires Data Solution to match Address 1, Address 2 pattern.</description>
        <inlineHelpText>The Location based data report is based on the accuracy of this postcode. This can be used every time an award is created for this Organisation. Each award can also have its own different address, separate to the one provided for an organisation.</inlineHelpText>
        <label>Primary Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The Organisation can be one or multiple of: Funder, Recipient and/or Intermediary, for various grants.</inlineHelpText>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Funder</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>Recipient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Reg_no__c</fullName>
        <description>This is an external id that will be used for the data upload process.</description>
        <externalId>true</externalId>
        <inlineHelpText>Tax registration number. To be provided if applicable.</inlineHelpText>
        <label>VAT Reg no</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Type__c</columns>
        <columns>Primary_City__c</columns>
        <columns>CPID_from_OSCAR__c</columns>
        <columns>Companies_House_Number__c</columns>
        <columns>Charities_Commission_Number__c</columns>
        <columns>VAT_Reg_no__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Organisations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Type__c</columns>
        <columns>Primary_City__c</columns>
        <columns>CPID_from_OSCAR__c</columns>
        <columns>Companies_House_Number__c</columns>
        <columns>Charities_Commission_Number__c</columns>
        <columns>VAT_Reg_no__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Organisations</label>
    </listViews>
    <listViews>
        <fullName>My_Department_Data</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Type__c</columns>
        <columns>Primary_City__c</columns>
        <columns>CPID_from_OSCAR__c</columns>
        <columns>Companies_House_Number__c</columns>
        <columns>Charities_Commission_Number__c</columns>
        <columns>VAT_Reg_no__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Department_Data__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Department&apos;s Data</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>All_Fields_Are_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;) 
 , NOT(ISNEW())
)</errorConditionFormula>
        <errorMessage>This record is locked. Please create a case or contact the grants hub support in order to modify this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Check_on_update</fullName>
        <active>true</active>
        <description>This is a global validation rule to stop users from updating other department&apos;s record.</description>
        <errorConditionFormula>AND ( 
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , ISPICKVAL($Profile.UserType, &apos;PowerCustomerSuccess&apos;)
 , NOT(ISNEW())
 , Owner.UserRoleId &lt;&gt;  $User.UserRoleId 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have update privilege on this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Org_Type_MultiPicklist_is_mandatory</fullName>
        <active>true</active>
        <description>Organisation Type is mandatory</description>
        <errorConditionFormula>AND( 
NOT($Setup.Bypass__c.Validation_Rules__c) 
,ISBLANK(Type__c)
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Organisation Type is mandatory. Please insert a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organisation_Type_is_mandatory</fullName>
        <active>false</active>
        <description>Organisation Type is mandatory</description>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c) 
 ,ISBLANK( Type__c )
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Organisation Type is mandatory. Please insert a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organisation_must_have_at_least_1_ext_Id</fullName>
        <active>true</active>
        <description>Organisation records must at least one external id.</description>
        <errorConditionFormula>AND(
  NOT($Setup.Bypass__c.Validation_Rules__c) 
 , NOT(INCLUDES( Type__c, &quot;Intermediary&quot; ))
 , ISBLANK( Companies_House_Number__c )
 , ISBLANK( Charities_Commission_Number__c )
 , ISBLANK( VAT_Reg_no__c )
 , ISBLANK( ISNI__c )
 , ISBLANK( Other_ID__c )
 , ISBLANK( DUNS_Number__c )
 , ISBLANK( CPID_from_OSCAR__c )
 , ISBLANK( International_ID__c )
)</errorConditionFormula>
        <errorMessage>Organisation must have at least 1 external id</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prm_Address_is_mandatory_For_Non_Funder</fullName>
        <active>true</active>
        <description>Primary Country field is a mandatory field for all the</description>
        <errorConditionFormula>AND(
 NOT($Setup.Bypass__c.Validation_Rules__c) 
 , INCLUDES( Type__c , &apos;Recipient&apos;)
 , OR(
  ISBLANK(Primary_Address_1__c)
  , ISBLANK(Primary_City__c)
  , ISBLANK(TEXT(Primary_Country__c))
  , ISBLANK(Primary_Postal_Code__c)
 )
)</errorConditionFormula>
        <errorMessage>Primary Address 1, Primary City, Primary Country and Primary Postal Code are mandatory for organisation record.</errorMessage>
    </validationRules>
</CustomObject>